vlib/v/checker/tests/orm_where_clause_unsupported_field_types_err.vv
module main

import db.pg

@[table: 'example']
pub struct Example {
	id      int  @[primary; sql: serial]
	example []u8 @[sql_type: 'bytea'; unique]
}

fn main() {
	db := pg.connect(pg.Config{}) or { exit(0) }
	bytes := [u8(0)]
	e := sql db {
		select from Example where example == bytes
	}!
	f := sql db {
		select from Example where (example == bytes)
	}!
	print(e)
	print(f)
}
